JVM crash in com.sun.webkit.dom.DocumentImpl.createAttribute

XMLWordPrintable

    • web
    • generic
    • generic

        ADDITIONAL SYSTEM INFORMATION :
        Ubuntu 19.10
        JRE version: OpenJDK Runtime Environment (11.0.5+10) (build 11.0.5+10)
        Java VM: OpenJDK 64-Bit Server VM (11.0.5+10, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)

        Also happens on Windows 10.

        A DESCRIPTION OF THE PROBLEM :
        when calling com.sun.webkit.dom.DocumentImpl.createAttribute with an invalid attributeName will crash the jvm in "libjfxwebkit.so"

        Problematic attributeName:
        - "X/:form"
        - "X/ :form"

        I have an error pid file. But can not attach it.


          1. hs_err_pid14204.log
            319 kB
          2. hs_err_pid22128.log
            33 kB
          3. hs_err_pid7612.log
            52 kB
          4. WebDOMApp.java
            1 kB

              Assignee:
              Arun Joseph (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: