8233747: JVM crash in com.sun.webkit.dom.DocumentImpl.createAttribute